force-app/main/default/objects/DNBConnect__D_B_Connect_Contact_Profile__c/DNBConnect__D_B_Connect_Contact_Profile__c.object-meta.xml
<CustomObject>
    <description>Holds all D&amp;B data fields for the matched contact record</description>
    <label>D&amp;B Connect Contact Profile</label>
    <nameField>
        <label>D&amp;B Connect Contact Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>D&amp;B Connect Contact Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>