force-app/main/default/objects/DNBConnect__D_B_Connect_Contact_Profile__c/fields/DNBConnect__compliance_Insights_description__c.field-meta.xml
<CustomField>
    <fullName>DNBConnect__compliance_Insights_description__c</fullName>
    <label>Compliance Insights Description</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>