force-app/main/default/objects/DNBConnect__D_B_Connect_Contact_Profile__c/fields/DNBConnect__D_B_Contact_Compliance__c.field-meta.xml
<CustomField>
    <fullName>DNBConnect__D_B_Contact_Compliance__c</fullName>
    <formula>HYPERLINK(&quot;https://connect.dnb.com/compliance-insights&quot;, &quot;D&amp;B&apos;s full Compliance Insight Document&quot;, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Click the link to learn more about permissible use of Contact with D&amp;B Compliance Insights.</inlineHelpText>
    <label>D&amp;B Compliance Insights Page</label>
    <type>Text</type>
</CustomField>