force-app/main/default/objects/DNBConnect__D_B_Connect_Contact_Profile__c/fields/DNBConnect__D_B_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>DNBConnect__D_B_Contact_ID__c</fullName>
    <description>The Dun &amp; Bradstreet Contact ID is an identification number assigned by Dun &amp; Bradstreet that uniquely identifies the Contact.</description>
    <externalId>true</externalId>
    <inlineHelpText>The Dun &amp; Bradstreet Contact ID is an identification number assigned by Dun &amp; Bradstreet that uniquely identifies the Contact.</inlineHelpText>
    <label>D&amp;B Contact ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>