force-app/main/default/objects/DNBConnect__D_B_Connect_Contact_Profile__c/fields/DNBConnect__D_B_globalContactKey__c.field-meta.xml
<CustomField>
    <fullName>DNBConnect__D_B_globalContactKey__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>D&amp;B Global Contact Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>