force-app/main/default/objects/DNBConnect__D_B_Connect_Contact_Profile__c/fields/DNBConnect__DUNS_Number__c.field-meta.xml
<CustomField>
    <fullName>DNBConnect__DUNS_Number__c</fullName>
    <description>The Dun &amp; Bradstreet D-U-N-S Number with which the contact is associated. The D-U-N-S Number is an identification number assigned by Dun &amp; Bradstreet that uniquely identifies the entity in accordance with the Data Universal Numbering System (D-U-N-S).</description>
    <inlineHelpText>The Dun &amp; Bradstreet D-U-N-S Number with which the contact is associated. The D-U-N-S Number is an identification number assigned by Dun &amp; Bradstreet that uniquely identifies the entity in accordance with the Data Universal Numbering System (D-U-N-S).</inlineHelpText>
    <label>D&amp;B Contact DUNS Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>