force-app/main/default/objects/DNBConnect__D_B_Connect_Contact_Profile__c/fields/DNBConnect__First_Name__c.field-meta.xml
<CustomField>
    <fullName>DNBConnect__First_Name__c</fullName>
    <description>The given name of the individual. In western cultures this is usually presented first.</description>
    <inlineHelpText>The given name of the individual. In western cultures this is usually presented first.</inlineHelpText>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>